--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,34 @@
 <resources>
     <string name="app_name">Album</string>
+
+
+    <!--登陆模块-->
+    <string name="login_username">邮箱/手机号</string>
+    <string name="password">密码</string>
+    <string name="login">登陆</string>
+    <string name="reget_password">找回密码</string>
+    <string name="regist_now">现在注册</string>
+    <string name="please_input_phone_number">请输入手机号码</string>
+    <string name="please_input_verify_code">输入验证码</string>
+    <string name="get_verify_code">获取验证码</string>
+    <string name="please_input_password">请输入密码</string>
+    <string name="please_input_email">请输入邮箱</string>
+    <string name="confirm_password">确认密码</string>
+    <string name="regist">注册</string>
+    <string name="send_success">发送成功</string>
+    <string name="please_input_right_number">请输入正确的手机号码</string>
+    <string name="password_not_equal">两次输入密码不一致</string>
+    <string name="verification_error">验证码错误</string>
+    <string name="username_password_cannot_empty">账户和密码不能为空</string>
+    <string name="login_success">登陆成功</string>
+    <string name="connect_failure">连接服务器失败，请检查网络连接</string>
+    <string name="remember_password">记住密码</string>
+    <string name="login_failure">登陆失败，请检查账户和密码是否正确</string>
+    <string name="auto_login">自动登陆</string>
+    <string name="user_exist">该用户已存在，请直接登陆</string>
+    <string name="please_input_username">请输入用户名</string>
+
+
     <string name="album">相册</string>
     <string name="photo">照片</string>
     <string name="open">打开</string>
@@ -22,4 +51,8 @@
     <string name="photo_detail">图片详情</string>
     <string name="sorry_not_found">抱歉没有找到符合条件的内容</string>
     <string name="searching">正在搜索中...</string>
+    <string name="cloud">云端</string>
+    <string name="click_to_login">没有登陆无法查看云端照片,点击登陆</string>
+
+
 </resources>
