--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Album</string>
+    <string name="app_name">快查相册</string>
 
 
     <!--登陆模块-->
@@ -53,6 +53,8 @@
     <string name="searching">正在搜索中...</string>
     <string name="cloud">云端</string>
     <string name="click_to_login">没有登陆无法查看云端照片,点击登陆</string>
+    <string name="share_information">快来使用快查相册吧,轻松管理相册，还有云备份哦</string>
+
 
 
 </resources>
